--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -736,6 +736,9 @@ service qrngd /system/bin/qrngd -f
     user root
     group root
 
+on property:sys.boot_completed=1
+    start qrngp
+
 service qrngp /system/bin/qrngp
     class main
     user root
