--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -901,7 +901,7 @@ on property:persist.radio.multisim.config=dsds
     start ril-daemon
     start ril-daemon1
 
-service ril-daemon1 /system/bin/rild -c 1
+service ril-daemon1 /system/bin/rild -s rild1 -ds rild-debug1 -l /system/lib/libsec-ril-dsds.so
     class main
     socket rild1 stream 660 root radio
     socket rild-debug1 stream 660 radio system
