--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -667,12 +667,12 @@ service ds_fmc_appd /system/bin/ds_fmc_appd -p "rmnet0" -D
     disabled
     oneshot
 
-service fm_dl /system/bin/sh /system/etc/init.qcom.fm.sh
-    class late_start
-    user root
-    group system fm_radio
-    disabled
-    oneshot
+#service fm_dl /system/bin/sh /system/etc/init.qcom.fm.sh
+#    class late_start
+#    user root
+#    group system fm_radio
+#    disabled
+#    oneshot
 
 on property:bluetooth.hciattach=false
     setprop bluetooth.status off
