rootdir: Fix LPM charging
This is probably temporary until i add selinux support
Clean up a bit

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -631,9 +631,6 @@ service adsprpcd /system/bin/adsprpcd
     user media
     group media
 
-on property:persist.radio.atfwd.start=false
-    stop atfwd
-
 service audiod /system/bin/audiod
     class late_start
     user system
@@ -642,6 +639,7 @@ service audiod /system/bin/audiod
 service charger /charger
     class charger
     critical
+    seclabel u:r:healthd:s0
 
 on property:vold.decrypt=trigger_restart_framework
     start config_bluetooth
@@ -954,25 +952,6 @@ on property:sys.boot_completed=1
 
 on property:init.svc.bootanim=stopped
     write /sys/block/mmcblk0/queue/scheduler row
-
-    # Configure ondemand governor
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "ondemand"
-    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor "ondemand"
-    write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor "ondemand"
-    write /sys/devices/system/cpu/cpu3/cpufreq/scaling_governor "ondemand"
-    write /sys/devices/system/cpu/cpufreq/ondemand/sampling_rate 50000
-    write /sys/devices/system/cpu/cpufreq/ondemand/up_threshold 90
-    write /sys/devices/system/cpu/cpufreq/ondemand/io_is_busy 1
-    write /sys/devices/system/cpu/cpufreq/ondemand/sampling_down_factor 2
-    write /sys/devices/system/cpu/cpufreq/ondemand/down_differential 10
-    write /sys/devices/system/cpu/cpufreq/ondemand/up_threshold_multi_core 70
-    write /sys/devices/system/cpu/cpufreq/ondemand/down_differential_multi_core 10
-    write /sys/devices/system/cpu/cpufreq/ondemand/optimal_freq 300000
-    write /sys/devices/system/cpu/cpufreq/ondemand/sync_freq 300000
-    write /sys/devices/system/cpu/cpufreq/ondemand/up_threshold_any_cpu_load 80
-    write /sys/devices/system/cpu/cpufreq/ondemand/freq_step 20
-    write /sys/devices/system/cpu/cpufreq/ondemand/sampling_early_factor 1
-    write /sys/devices/system/cpu/cpufreq/ondemand/sampling_interim_factor 1
 
     # Configure interactive governor
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
