--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -696,7 +696,7 @@ service hvdcp /system/bin/hvdcp
     user root
     disabled
 
-service irsc_util /system/bin/logwrapper /system/bin/irsc_util "/etc/sec_config"
+service irsc_util /system/bin/irsc_util "/etc/sec_config"
     class main
     user root
     oneshot
