--- a/rootdir/init.qcom.usb.rc
+++ b/rootdir/init.qcom.usb.rc
@@ -893,6 +893,7 @@ on property:sys.usb.config=ncm,adb
     setprop sys.usb.state ${sys.usb.config}
 
 on property:sys.usb.config=charging
+    stop adbd
     write /sys/class/android_usb/android0/enable 0
     write /sys/class/android_usb/android0/idVendor 05C6
     write /sys/class/android_usb/android0/idProduct F006
