Revert "wifi: Update WCNSS config"
This reverts commit 63d61745ab8fbfa5f7cfb181c6b1ec59cf66f002.

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -85,7 +85,7 @@ gNthBeaconFilter=50
 
 # 2: Filter all Broadcast. 3: Filter all Mcast abd Bcast
 
-McastBcastFilter=2
+McastBcastFilter=3
 
 
 #Flag to enable HostARPOffload feature or not
@@ -111,7 +111,7 @@ gEnableApProt=1
 
 #Enable OBSS protection
 
-gEnableApOBSSProt=0
+gEnableApOBSSProt=1
 
 
 #Enable/Disable UAPSD for SoftAP
@@ -151,7 +151,7 @@ WmmIsEnabled=0
 
 # 802.11d support
 
-g11dSupportEnabled=0
+g11dSupportEnabled=1
 
 # 802.11h support
 
@@ -160,7 +160,7 @@ g11hSupportEnabled=1
 # CCX Support and fast transition
 CcxEnabled=0
 FastTransitionEnabled=1
-ImplicitQosIsEnabled=1
+ImplicitQosIsEnabled=0
 gNeighborScanTimerPeriod=200
 
 gNeighborLookupThreshold=76
@@ -278,9 +278,9 @@ BandCapability=0
 
 #Beacon Early Termination (1 = enable the BET feature, 0 = disable)
 
-enableBeaconEarlyTermination=1
+enableBeaconEarlyTermination=0
 
-beaconEarlyTerminationWakeInterval=11
+beaconEarlyTerminationWakeInterval=3
 
 
 #Bluetooth Alternate Mac Phy (1 = enable the BT AMP feature, 0 = disable)
@@ -356,8 +356,8 @@ gVhtTxMCS=2
 # Scan Timing Parameters
 # gPassiveMaxChannelTime=110
 # gPassiveMinChannelTime=60
-gActiveMaxChannelTime=80
-gActiveMinChannelTime=60
+# gActiveMaxChannelTime=40
+# gActiveMinChannelTime=20
 
 #If set to 0, MCC is not allowed.
 gEnableMCCMode=1
