--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -10,7 +10,7 @@
 #     * Neither the name of The Linux Foundation nor
 #       the names of its contributors may be used to endorse or promote
 #       products derived from this software without specific prior written
-#       permission.c
+#       permission.
 #
 # THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
 # AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
@@ -28,7 +28,6 @@
 import init.qcom.usb.rc
 
 on early-init
-
     mount debugfs debugfs /sys/kernel/debug
 
     mkdir /firmware 0771 system system
@@ -41,7 +40,6 @@ on early-init
     symlink /data/tombstones /tombstones
 
 on init
-
     mkdir /mnt/shell/emulated 0700 shell shell
     mkdir /storage/emulated 0555 root root
 
@@ -90,8 +88,7 @@ on fs
     write /dev/wcnss_wlan 1
 
 on post-fs-data
-
-    # we will remap this as /mnt/sdcard with the sdcard fuse tool
+    # We will remap this as /mnt/sdcard with the sdcard fuse tool
     mkdir /data/media 0770 media_rw media_rw
     chown media_rw media_rw /data/media
 
@@ -99,7 +96,7 @@ on post-fs-data
     mkdir /data/connectivity 0771 system system
     chown system system /data/connectivity
 
-    # for WIFI TRP/TIS
+    # For WIFI TRP/TIS
     chown system root /data/.psm.info
     chmod 0664 /data/.psm.info
 
@@ -107,7 +104,7 @@ on post-fs-data
     chown system root /data/.ant.info
     chmod 0664 /data/.ant.info
 
-    # for WIFI Version
+    # For WIFI Version
     write /data/.wifiver.info 0
     chown system root /data/.wifiver.info
     chmod 0664 /data/.wifiver.info
@@ -118,7 +115,7 @@ on post-fs-data
     chmod 0664 /data/.frameburst.info
     chmod 0664 /data/.txbf.info
 
-    # for WIFI MAC address
+    # For WIFI MAC address
     mkdir /efs/wifi 0775 radio system
     chown system wifi /efs/wifi/.mac.info
     chmod 0660 /efs/wifi/.mac.info
@@ -188,7 +185,7 @@ on post-fs-data
     mkdir /data/misc/radio 0775 radio radio
     mkdir /data/misc/radio/hatp 0775 radio system
 
-    # drm and related files in EFS
+    # DRM and related files in EFS
     mkdir /efs/drm 0774 drm system
     mkdir /efs/drm/sdrm 0774 drm system
     mkdir /efs/drm/sdrm/data_agent 0774 drm system
@@ -213,7 +210,7 @@ on post-fs-data
     chown radio system /efs/prov/libdevkm.lock
     chmod 0660 /efs/prov/libdevkm.lock
 
-    # icd
+    # ICD
     exec check_icd
     chown system system /dev/icd
     chmod 0644 /dev/icd
@@ -229,48 +226,25 @@ on post-fs-data
     chown system system /sys/class/sec/led/led_blink
     chown system system /sys/class/sec/led/led_lowpower
 
-    # symlink to bugreport storage location
+    # Symlink to bugreport storage location
     symlink /data/data/com.android.shell/files/bugreports /data/bugreports
 
 on early-boot
-    # set RLIMIT_MEMLOCK to 64MB
+    # Set RLIMIT_MEMLOCK to 64MB
     setrlimit 8 67108864 67108864
 
     # Allow subsystem (modem etc) debugging
     write /sys/module/subsystem_restart/parameters/enable_debug ${persist.sys.ssr.enable_debug}
 
 on boot
-
     mount debugfs /sys/kernel/debug /sys/kernel/debug
 
-    # For BT MAC address
-    mkdir /efs/bluetooth 0775 radio system
-
     # Permissions for bluetooth
+    mkdir /efs/bluetooth 0775 radio system
     setprop ro.bt.bdaddr_path "/efs/bluetooth/bt_addr"
     chown bluetooth net_bt_stack ro.bt.bdaddr_path
     chown radio net_bt_stack /efs/bluetooth/bt_addr
-    chmod 0640 /efs/bluetooth/bt_addr
-    chown bluetooth net_bt_stack /dev/ttyHS0
-    chown bluetooth bluetooth /dev/ttyHS2
-    chmod 0660 /dev/ttyHS0
-    chmod 0660 /dev/ttyHS2
-    chmod 0660 /sys/class/rfkill/rfkill0/state
-    chown bluetooth net_bt_stack /sys/class/rfkill/rfkill0/state
-    chown bluetooth net_bt_stack /sys/class/rfkill/rfkill0/type
-    chown bluetooth bluetooth /sys/module/bluetooth_power/parameters/power
-    chown bluetooth bluetooth /proc/bluetooth/sleep/proto
-    chown bluetooth bluetooth /sys/module/hci_uart/parameters/ath_lpm
-    chown bluetooth bluetooth /sys/module/hci_uart/parameters/ath_btwrite
-    chown bluetooth bluetooth /sys/module/hci_smd/parameters/hcismd_set
-    chown bluetooth bluetooth /sys/devices/platform/msm_serial_hs.0/clock
-    chown system system /sys/module/sco/parameters/disable_esco
-    chmod 0660 /sys/module/bluetooth_power/parameters/power
-    chmod 0660 /proc/bluetooth/sleep/proto
-    chmod 0660 /sys/module/hci_uart/parameters/ath_lpm
-    chmod 0660 /sys/module/hci_uart/parameters/ath_btwrite
-    chmod 0660 /sys/module/hci_smd/parameters/hcismd_set
-    chmod 0660 /sys/devices/platform/msm_serial_hs.0/clock
+    chmod 0755 /efs/bluetooth/bt_addr
     restorecon_recursive /efs/bluetooth
 
     # IMEI
