s3ve3g: Configure devfreq based on power profiles
Signed-off-by: Zhao Wei Liew <zhaoweiliew@gmail.com>

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -880,6 +880,8 @@ on property:sys.perf.profile=0
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor conservative
     write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor conservative
     write /sys/devices/system/cpu/cpu3/cpufreq/scaling_governor conservative
+    write /sys/class/devfreq/qcom,cpubw.68/governor powersave
+    write /sys/class/kgsl/kgsl-3d0/devfreq/governor powersave
 
 # Balanced
 on property:sys.perf.profile=1
@@ -888,6 +890,8 @@ on property:sys.perf.profile=1
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor interactive
     write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor interactive
     write /sys/devices/system/cpu/cpu3/cpufreq/scaling_governor interactive
+    write /sys/class/devfreq/qcom,cpubw.68/governor msm_cpufreq
+    write /sys/class/kgsl/kgsl-3d0/devfreq/governor msm-adreno-tz
 
 # High performance
 on property:sys.perf.profile=2
@@ -900,3 +904,5 @@ on property:sys.perf.profile=2
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor performance
     write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor performance
     write /sys/devices/system/cpu/cpu3/cpufreq/scaling_governor performance
+    write /sys/class/devfreq/qcom,cpubw.68/governor performance
+    write /sys/class/kgsl/kgsl-3d0/devfreq/governor performance
