--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -100,7 +100,7 @@ on post-fs-data
     chown system root /data/.psm.info
     chmod 0664 /data/.psm.info
 
-    # for WIFI Antena Selection
+    # For WIFI Antena Selection
     chown system root /data/.ant.info
     chmod 0664 /data/.ant.info
 
@@ -109,7 +109,7 @@ on post-fs-data
     chown system root /data/.wifiver.info
     chmod 0664 /data/.wifiver.info
 
-    # for WIFI Cert
+    # For WIFI Cert
     chmod 0664 /data/.bustxglom.info
     chmod 0664 /data/.roamoff.info
     chmod 0664 /data/.frameburst.info
@@ -862,7 +862,7 @@ on property:init.svc.bootanim=stopped
     write /sys/devices/system/cpu/cpufreq/interactive/sampling_down_factor 100000
 
     # Configure CPU boost
-    write /sys/module/cpu_boost/parameters/boost_ms 20
+    # write /sys/module/cpu_boost/parameters/boost_ms 20
     write /sys/module/cpu_boost/parameters/sync_threshold 600000
     write /sys/module/cpu_boost/parameters/input_boost_freq 998400
     write /sys/module/cpu_boost/parameters/input_boost_ms 40
@@ -871,7 +871,6 @@ on property:init.svc.bootanim=stopped
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_min_freq 300000
     write /sys/devices/system/cpu/cpu2/cpufreq/scaling_min_freq 300000
     write /sys/devices/system/cpu/cpu3/cpufreq/scaling_min_freq 300000
-    write /dev/cpuctl/apps/cpu.notify_on_migrate 1
 
 # Powersave
 on property:sys.perf.profile=0
