--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -847,7 +847,7 @@ on property:sys.boot_completed=1
     start mpdecision
 
 on property:init.svc.bootanim=stopped
-    write /sys/block/mmcblk0/queue/scheduler row
+    write /sys/block/mmcblk0/queue/scheduler fiops
 
     # Configure interactive governor
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
