--- a/rootdir/init.qcom.power.rc
+++ b/rootdir/init.qcom.power.rc
@@ -27,10 +27,11 @@
 
 service charger /sbin/healthd -c
     class charger
+    critical
     seclabel u:r:healthd:s0
 
 on charger
-    mount_all fstab.qcom
+    mount ext4 /dev/block/platform/msm_sdcc.1/by-name/system /system wait ro
     class_start charger
     write /sys/devices/system/cpu/cpu1/online 1
     write /sys/devices/system/cpu/cpu2/online 1
