--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -29,6 +29,8 @@ import init.qcom.power.rc
 import init.qcom.usb.rc
 
 on early-init
+    export LD_SHIM_LIBS /system/lib/libril.so|libril_shim.so
+
     mount debugfs debugfs /sys/kernel/debug
 
     mkdir /firmware 0771 system system
